# Text2Image

./: .clang-format  .dockerignore  .editorconfig  .env.example  .env.production.example  .gitignore  .prettierrc.json  README.md  docker-compose.prod.yml  docker-compose.yml  plan.md  problem.md  pyproject.toml  zimage-cpp23-refactoring-guide.md
.github/workflows/: ci.yml  model-service-image.yml
Backend/: .dockerignore  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  codex.md  config.json.example  vcpkg.json
Backend/include/: Backend.h  ImageRepo.h  UserRepo.h  async_image_queue.h  auth_controller.h  auth_service.h  base64_utils.h  client.h  db_manager.h  image_controller.h  image_generation.h  image_service.h  image_storage.h  jwt_middleware.h  jwt_utils.h  minio_client.h  password_utils.h  redis_client.h  service_error.h  task_event_hub.h  task_state_machine.h  task_ws_controller.h  user.h
Backend/include/controllers/: auth_controller.h  image_controller.h
Backend/include/database/: ImageRepo.h  UserRepo.h  db_manager.h  i_image_repo.h
Backend/include/models/: failure_code.h  i_image_storage.h  image_generation.h  image_storage.h  task_status.h  user.h
Backend/include/services/: async_image_queue.h  auth_service.h  cache_client.h  client.h  generation_client.h  i_cache_client.h  i_http_client.h  image_cache_key.h  image_service.h  image_service_types.h  minio_client.h  null_cache_client.h  service_error.h  task_engine.h  task_event_hub.h
Backend/include/utils/: chrono_utils.h  string_utils.h
Backend/src/: Backend.cpp  main.cpp
Backend/src/controllers/: auth_controller.cpp  image_controller.cpp  task_ws_controller.cpp
Backend/src/database/: ImageRepo.cpp  UserRepo.cpp  db_manager.cpp
Backend/src/middleware/: jwt_middleware.cpp
Backend/src/models/: image_generation.cpp  image_storage.cpp  user.cpp
Backend/src/services/: async_image_queue.cpp  auth_service.cpp  cache_client.cpp  client.cpp  generation_client.cpp  image_service.cpp  minio_client.cpp  redis_client.cpp  task_engine.cpp  task_event_hub.cpp
Backend/src/utils/: base64_utils.cpp  jwt_utils.cpp  password_utils.cpp  string_utils.cpp  task_state_machine.cpp
Backend/tests/: CMakeLists.txt
Backend/tests/integration/: test_auth_flow.cpp  test_cache_client_redis.cpp  test_db_support.cpp  test_db_support.h  test_image_flow.cpp  test_image_repo.cpp  test_task_engine_lazy_bootstrap.cpp
Backend/tests/unit/: test_async_image_queue.cpp  test_cache_client.cpp  test_chrono_utils.cpp  test_db_config.cpp  test_generation_client.cpp  test_image_generation.cpp  test_image_service_cache.cpp  test_image_service_injection.cpp  test_jwt_utils.cpp  test_password_utils.cpp  test_redis_config.cpp  test_service_error.cpp  test_string_utils.cpp  test_task_event_hub.cpp  test_task_state_machine.cpp  test_user_model.cpp
ModelService/: .dockerignore  .gitignore  Dockerfile  main.py  model_service.py  requirements.txt  train_lora.py
PythonProject/: .gitignore  auto_caption.py  inference_with_lora.py  model_service.py  start_model_service.py  train_lora.py
ZImageFrontend/: Dockerfile  index.html  jsconfig.json  nginx.conf  package-lock.json  package.json  vite.config.js  vite.config.mjs
ZImageFrontend/src/: App.vue  main.js
ZImageFrontend/src/api/: auth.js  image.js
ZImageFrontend/src/components/: ImageGenerator.vue  ImageHistory.vue
ZImageFrontend/src/router/: index.js
ZImageFrontend/src/stores/: auth.js  image.js
ZImageFrontend/src/utils/: imageTask.js  jwt.js  request.js  taskSocket.js
ZImageFrontend/src/views/: Home.vue  Login.vue  Register.vue
init-db/: 01-schema.sql
init-db/migrations/: 001_initial_schema.sql  002_image_generation_task_queue.sql  003_add_image_base64.sql
scripts/: format.ps1  format.sh  run-db-migrations.sh
